crates/typechecker/tests/snapshots/fixture_test__list_recursive.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
eq: forall c. fn(c, c) -> Bool
lt: forall d. fn(d, d) -> Bool
combine: forall c. fn(c, c) -> c
sub: forall c. fn(c, c) -> c
mul: forall c. fn(c, c) -> c
div: forall c. fn(c, c) -> c
neg: forall c. fn(c) -> c
show: forall c. fn(c) -> String
hash: forall c. fn(c) -> Int
close: forall c. fn(own c) -> Unit
peek: forall d. fn(d) -> d
println: forall i. fn(i) -> Unit
Some: forall b. fn(b) -> Option[b]
None: forall b. Option[b]
Ok: forall c d. fn(d) -> Result[c, d]
Err: forall c d. fn(c) -> Result[c, d]
Cons: forall e. fn(e, List[e]) -> List[e]
Nil: forall e. List[e]
LT: Ordering
EQ: Ordering
GT: Ordering
Cons: forall j. fn(j, List[j]) -> List[j]
Nil: forall j. List[j]
length: forall z. fn(List[z]) -> own Int
