crates/typechecker/tests/snapshots/fixture_test__map_dict_singleton.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
eq: forall g. fn(g, g) -> Bool
lt: forall h. fn(h, h) -> Bool
combine: forall g. fn(g, g) -> g
sub: forall g. fn(g, g) -> g
mul: forall g. fn(g, g) -> g
div: forall g. fn(g, g) -> g
neg: forall g. fn(g) -> g
show: forall g. fn(g) -> String
hash: forall g. fn(g) -> Int
close: forall g. fn(~g) -> Unit
peek: forall h. fn(h) -> h
println: forall m. fn(m) -> Unit
Some: forall e. fn(e) -> Option[e]
None: forall e. Option[e]
Ok: forall f g. fn(g) -> Result[f, g]
Err: forall f g. fn(f) -> Result[f, g]
Cons: forall h. fn(h, List[h]) -> List[h]
Nil: forall h. List[h]
LT: Ordering
EQ: Ordering
GT: Ordering
empty: forall g3 h3. fn() -> Map[g3, h3]
put: forall l3 m3. fn(Map[l3, m3], l3, m3) -> Map[l3, m3]
get: forall e4 f4. fn(Map[e4, f4], e4) -> Option[f4]
contains: forall c5 d5. fn(Map[c5, d5], c5) -> Bool
from_list: forall t7 u7. fn(List[(t7, u7)]) -> Map[t7, u7]
size: forall a8 b8. fn(Map[a8, b8]) -> Int
main: fn() -> Unit
